test/end-to-end/compile-errors/variant-member-template.crow
main void()
	info log "done"

-v variant
-x[t] record(value t) v variant-member
